========================
Changes between versions
========================

0.2
===

User visible:
  - improved documentation

Organisation:
  - fixed handling of tl namespace package


0.1
===

initial release