@@ -8,6 +8,9 @@ Changes between versions
 User visible:
   - improved documentation
 
+Bugs:
+  - consider dependencies broken in the case of a version conflict
+
 Organisation:
   - fixed handling of tl namespace package
 
